--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^5.0.0
+  provider: ^6.0.1
+  http: ^0.13.4
   intl: ^0.17.0 #Vai ser utilizado para fazer formatações, como as datas
   flutter_localizations:
     sdk: flutter
